--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "epubjs": "^0.3.88",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3"
   },
