--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,27 +5,10 @@ jobs:
   continues_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - name: Webpack build
-        working-directory: ./web
-        run: |
-          npm install
-          npm run build
-          mv dist/* ../server/public
-          tar -cvf ../deploy.tar ../server
-      - name: Copy to server
-        uses: garygrossgarten/github-action-scp@release
-        with:
-          local: deploy.tar
-          remote: /home/huang825172/MirageReading
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          privateKey: ${{ secrets.PEM }}
       - name: Deploy on server
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: cd /home/huang825172/MirageReading && ls
+          command: cd /home/huang825172 && git clone https://${{ secrets.GITUSR }}:${{ secrets.GITPWD }}@github.com/limBuddies/MirageReading.git && ls
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           privateKey: ${{ secrets.PEM }}
