--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.17.0"
   }
 }
